#21 Adding status to task when adding a new task to database